--- a/about.html
+++ b/about.html
@@ -42,8 +42,7 @@
     <!--footer-->
     <section class="footer">
         <h4>About Us</h4>
-        <p>some matter we will put for contacting us gives like that <br> bla vla fe fjwe w ef we few wegweg wefgwe </p>
-        <div class="icons">
+        <p>Copyright @ 2023 tridentarmor Aerospace & defence industries private limited. All Rights Reserved. </p>
             <i class="fa fa-facebook"></i>
             <i class="fa fa-twitter"></i>
             <i class="fa fa-instagram"></i>
