--- a/contact.html
+++ b/contact.html
@@ -73,7 +73,7 @@
     <!--footer-->
     <section class="footer">
         <h4>About Us</h4>
-        <p>some matter we will put for contacting us gives like that <br> bla vla fe fjwe w ef we few wegweg wefgwe <br></p>
+        <p>Copyright @ 2023 tridentarmor Aerospace & defence industries private limited. All Rights Reserved. </p>
         <div class="icons">
             <i class="fa fa-facebook"></i>
             <i class="fa fa-twitter"></i>
