--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
             <h1>TRIDENTARMOR AEROSPACE & DEFENCE 
                 <br>
                  INDUSTRIES PRIVATE LIMITED</h1>
-            <p>small matter will be putted after deciding bla bla bla bla bla bla bla bla bla bla bla bla bla bla</p>
-            <a href="visit-us.html" class="button">Visit Us To Know More</a>
+         <!---   <p>small matter will be putted after deciding bla bla bla bla bla bla bla bla bla bla bla bla bla bla</p> -->
+           <br> <a href="visit-us.html" class="button">Visit Us To Know More</a>
         </div>
         
     </section>
@@ -48,7 +48,7 @@
     <!--footer-->
     <section class="footer">
         <h4>About Us</h4>
-        <p>some matter we will put for contacting us gives like that <br> bla vla fe fjwe w ef we few wegweg wefgwe </p>
+        <p>Copyright @ 2023 tridentarmor Aerospace & defence industries private limited. All Rights Reserved. </p>
         <div class="icons">
             <i class="fa fa-facebook"></i>
             <i class="fa fa-twitter"></i>
