--- a/contact.html
+++ b/contact.html
@@ -49,7 +49,7 @@
                     
                     <span>
                         <i class="fa fa-envelope-o"></i>
-                        <h4>info@tridentarmor.com</h4>
+                        <h4>info@trident-armor.com</h4>
                         <h6>Email us your query</h6>
                     </span>
                 </div>
