--- a/contact.html
+++ b/contact.html
@@ -120,8 +120,8 @@
       function sendEmail() {
         Email.send({
           Host: "smtp.elasticemail.com",
-          Username: "info@trident-armor.com",
-          Password: "Trident@2022",
+          Username: "tridentarmorindustries@gmail.com",
+          Password: "CAD423D7516CC4ADBFE511A3CEB4832CADD8",
           To: "info@trident-armor.com",
           From: document.getElementById("email").value,
           Subject: "New Form Submission from website",
