--- a/contact.html
+++ b/contact.html
@@ -90,9 +90,9 @@
 
     <!--footer-->
     <section class="footer">
-      <h4>About Us</h4>
+      
       <p>
-        Copyright @ 2023 tridentarmor Aerospace & defence industries private
+        Copyright @ 2022-2023 tridentarmor Aerospace & defence industries private
         limited. All Rights Reserved.
       </p>
       <div class="icons">
