--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <h1>TRIDENTARMOR AEROSPACE & DEFENCE 
                 <br>
                  INDUSTRIES PRIVATE LIMITED</h1>
-         <!---   <p>small matter will be putted after deciding bla bla bla bla bla bla bla bla bla bla bla bla bla bla</p> -->
+          <!---- <p>small matter will be putted after deciding bla bla bla bla bla bla bla bla bla bla bla bla bla bla</p> -->
            <br> <a href="visit-us.html" class="button">Visit Us To Know More</a>
         </div>
         
@@ -47,8 +47,8 @@
 
     <!--footer-->
     <section class="footer">
-        <h4>About Us</h4>
-        <p>Copyright @ 2023 tridentarmor Aerospace & defence industries private limited. All Rights Reserved. </p>
+        
+        <p>Copyright @ 2022-2023 tridentarmor Aerospace & defence industries private limited. All Rights Reserved. </p>
         <div class="icons">
             <i class="fa fa-facebook"></i>
             <i class="fa fa-twitter"></i>
