--- a/blog.html
+++ b/blog.html
@@ -42,12 +42,14 @@
     <!--footer-->
     <section class="footer">
         
-        <p>Copyright @ 2023 tridentarmor Aerospace & defence industries private limited. All Rights Reserved. </p>
+        <p>Copyright @ 2022-2023 Tridentarmor Aerospace & Defence Industries Private
+            Limited. All Rights Reserved. </p>
         <div class="icons">
             <i class="fa fa-facebook"></i>
             <i class="fa fa-twitter"></i>
-            <i class="fa fa-instagram"></i>
-            <i class="fa fa-linkedin"></i>
+            <a href="https://instagram.com/tridentarmor?igshid=Yzg5MTU1MDY=" target="_blank"><i class="fa fa-instagram"></i></a>
+            <a href="https://www.linkedin.com/company/tridentarmor-aerospace-defence-industries-private-limited/" target="_blank"><i class="fa fa-linkedin"></i></a>
+            
         </div>
     </section>
 
