--- a/about.html
+++ b/about.html
@@ -95,7 +95,7 @@
                     <p>Co-Founder & Chief Operating Officer</p>
                     <div class="icons">
                       <a href="https://www.linkedin.com/in/krupakar-duvva-aab09022b" target="_blank"><i class="fa fa-linkedin"></i></a>
-                      <i class="fa fa-envelope-o"></i>
+                      <a href="mailto:duvvakrupakar@trident-armor.com"><i class="fa fa-envelope-o"></i></a>
                       <i class="fa fa-instagram"></i> 
                     </div>
                 </div>
@@ -117,7 +117,7 @@
                     <p>Co-Founder & Chief Financial Officer</p>
                     <div class="icons">
                       <a href="https://www.linkedin.com/in/ravula-siri-reddy-306302249" target="_blank"><i class="fa fa-linkedin"></i></a>
-                      <i class="fa fa-envelope-o"></i>
+                      <a href="mailto:siriravula@trident-armor.com"><i class="fa fa-envelope-o"></i></a>
                       <i class="fa fa-instagram"></i> 
                     </div>
                 </div>
